Include index performance numbers + updating site